--- a/app/src/main/res/layout/activity_student_query_leave_info_list.xml
+++ b/app/src/main/res/layout/activity_student_query_leave_info_list.xml
@@ -10,6 +10,13 @@
         android:layout_height="55dp"
         android:background="@color/actionBarBackgroundColor"
         >
+        <ImageView
+            android:id="@+id/iv_activity_student_query_leave_info_list_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -17,7 +24,7 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="17dp"
-            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/iv_activity_student_query_leave_info_list_back"
             />
     </RelativeLayout>
     <FrameLayout
