--- a/app/src/main/res/layout/activity_teacher_add_course.xml
+++ b/app/src/main/res/layout/activity_teacher_add_course.xml
@@ -11,6 +11,13 @@
         android:background="@color/actionBarBackgroundColor"
 
         >
+        <ImageView
+            android:id="@+id/iv_activity_teacher_add_course_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -18,11 +25,9 @@
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:gravity="center"
-            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/iv_activity_teacher_add_course_back"
             />
-
     </RelativeLayout>
-
     <ScrollView
 
         android:layout_width="match_parent"
