--- a/app/src/main/res/layout/activity_assistant_agree_for_leave.xml
+++ b/app/src/main/res/layout/activity_assistant_agree_for_leave.xml
@@ -6,11 +6,17 @@
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:background="#14b7f5"
         android:orientation="horizontal"
         android:gravity="left"
         >
+        <ImageView
+            android:id="@+id/iv_activity_assistant_agree_for_leave_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -19,8 +25,8 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="20dp"
-            android:layout_marginLeft="30dp"
-            />
+            android:layout_toRightOf="@id/iv_activity_assistant_agree_for_leave_back"
+            android:layout_marginLeft="20dp"/>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
