--- a/app/src/main/res/layout/activity_assistant_change_info.xml
+++ b/app/src/main/res/layout/activity_assistant_change_info.xml
@@ -14,6 +14,13 @@
         android:background="@color/actionBarBackgroundColor"
         android:orientation="horizontal"
         >
+        <ImageView
+            android:id="@+id/iv_activity_assistant_change_info_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -21,8 +28,9 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="20dp"
-            android:paddingLeft="20dp"
+            android:layout_toRightOf="@id/iv_activity_assistant_change_info_back"
             />
+
     </RelativeLayout>
 
     <LinearLayout
