--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,8 +13,14 @@
         android:layout_weight="1"
         android:background="#14b7f5"
         android:orientation="horizontal"
-        android:gravity="center"
         >
+        <ImageView
+            android:id="@+id/iv_activity_forget_password_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -23,7 +29,9 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="20dp"
+            android:layout_toRightOf="@id/iv_activity_forget_password_back"
             />
+
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
