--- a/app/src/main/res/layout/activity_student_query_course_item_info.xml
+++ b/app/src/main/res/layout/activity_student_query_course_item_info.xml
@@ -6,24 +6,30 @@
     android:orientation="vertical"
     android:layout_weight="11"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/actionBarBackgroundColor"
         >
+        <ImageView
+            android:id="@+id/iv_activity_student_query_course_item_info_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="考勤详细列表"
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-
+            android:layout_toRightOf="@id/iv_activity_student_query_course_item_info_back"
             />
+    </RelativeLayout>
 
-    </LinearLayout>
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/activity_student_query_course_item_info_list_view"
         android:layout_width="match_parent"
