--- a/app/src/main/res/layout/activity_teacher_checking_student_attendance_list.xml
+++ b/app/src/main/res/layout/activity_teacher_checking_student_attendance_list.xml
@@ -8,13 +8,19 @@
     android:orientation="vertical"
     android:weightSum="11"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/actionBarBackgroundColor"
-        android:gravity="center"
         >
+        <ImageView
+            android:id="@+id/iv_activity_teacher_checking_student_attendance_list_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -22,9 +28,9 @@
             android:text="考勤状况"
             android:gravity="center"
             android:textColor="#ffffff"
-
+            android:layout_toRightOf="@id/iv_activity_teacher_checking_student_attendance_list_back"
             />
-    </LinearLayout>
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
