--- a/app/src/main/res/layout/activity_teacher_query_course_student_info.xml
+++ b/app/src/main/res/layout/activity_teacher_query_course_student_info.xml
@@ -6,22 +6,29 @@
     android:weightSum="11"
     android:orientation="vertical"
     >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/actionBarBackgroundColor"
         >
+        <ImageView
+            android:id="@+id/iv_activity_teacher_query_course_student_info_back"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back"
+            android:padding="13dp"
+            android:layout_marginRight="20dp"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="学生考勤详细列表"
             android:textColor="#ffffff"
             android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
+            android:layout_toRightOf="@id/iv_activity_teacher_query_course_student_info_back"
             />
-    </LinearLayout>
+    </RelativeLayout>
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/acivity_teacher_query_course_student_info_listview"
         android:layout_width="match_parent"
