--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,7 +68,7 @@
         <item name="android:textSize">14dp</item>
     </style>
     <style name="blackText">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textColor">#000000</item>
     </style>
     <style name="blackEditText">
