--- a/app/src/main/res/layout/activity_assistant_agree_for_class.xml
+++ b/app/src/main/res/layout/activity_assistant_agree_for_class.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="申请入班"
+            android:text="允许加入班级"
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:gravity="center"
