--- a/app/src/main/res/layout/fragment_teacher_inquire.xml
+++ b/app/src/main/res/layout/fragment_teacher_inquire.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#ffffff"
+    android:background="@color/backgroundColor"
     >
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:layout_width="match_parent"
