--- a/app/src/main/res/layout/item_assistant_agree_for_class.xml
+++ b/app/src/main/res/layout/item_assistant_agree_for_class.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#ffffff">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/clv_item_assistant_agree_for_class"
         android:layout_width="60dp"
