--- a/app/src/main/res/layout/student_list_view_course_item.xml
+++ b/app/src/main/res/layout/student_list_view_course_item.xml
@@ -22,42 +22,50 @@
 
         >
         <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="horizontal"
             >
             <TextView
+                android:gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="课程编号: "
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
                 />
             <TextView
+                android:gravity="center"
                 android:id="@+id/student_list_view_course_item_course_id"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="123"
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
                 />
         </LinearLayout>
         <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="horizontal"
             >
             <TextView
+
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="课程名称: "
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
                 android:gravity="center"
                 />
             <TextView
+                android:gravity="center"
                 android:id="@+id/student_list_view_course_item_course_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="软件测试"
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
                 />
         </LinearLayout>
 
