--- a/app/src/main/res/layout/teacher_list_view_course_item.xml
+++ b/app/src/main/res/layout/teacher_list_view_course_item.xml
@@ -13,6 +13,7 @@
 
         android:src="@drawable/course"
         />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,47 +23,56 @@
 
         >
         <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="horizontal"
             >
             <TextView
+                android:gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="课程编号: "
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
+
                 />
             <TextView
+                android:gravity="center"
                 android:id="@+id/teacher_list_view_course_item_course_id"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="123"
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
+
                 />
         </LinearLayout>
         <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="horizontal"
             >
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="课程名称: "
-                style="@style/courseTextStyleBig"
                 android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="课程名称: "
+                android:textSize="48px"
                 />
             <TextView
+                android:gravity="center"
                 android:id="@+id/teacher_list_view_course_item_course_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="软件测试"
-                style="@style/courseTextStyleBig"
+                android:textSize="48px"
                 />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="1dp"
             android:orientation="horizontal"
             >
             <TextView
