--- a/app/src/main/res/layout/list_view_assistant_query_class_student_attentance_item.xml
+++ b/app/src/main/res/layout/list_view_assistant_query_class_student_attentance_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="10dp"
-        android:src="@drawable/course"
+        android:src="@drawable/icon_head"
         />
     <LinearLayout
         android:layout_width="match_parent"
