--- a/app/src/main/res/layout/student_list_view_course_item.xml
+++ b/app/src/main/res/layout/student_list_view_course_item.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="课程编号: "
-                android:textSize="48px"
+                android:textSize="15dp"
                 />
             <TextView
                 android:gravity="center"
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="123"
-                android:textSize="48px"
+                android:textSize="15dp"
                 />
         </LinearLayout>
         <LinearLayout
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="课程名称: "
-                android:textSize="48px"
+                android:textSize="15dp"
                 android:gravity="center"
                 />
             <TextView
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="软件测试"
-                android:textSize="48px"
+                android:textSize="15dp"
                 />
         </LinearLayout>
 
